REGRESSION: Pressing return in a particular document sends the cursor to the end of the document. https://bugs.webkit.org/show_bug.cgi?id=64140 <rdar://problem/9737491>

Source/WebCore:

Inserting a paragraph separator at a break element, inside an inline, generates redundant markup
and moves the selection at the end of the inserted block.
The fix consists in detecting that the insertion point is a break element and simply inserting another
break element. This solves the problem of the wrong final selection and also produces less redundant
markup.

Reviewed by Simon Fraser.

Test: editing/inserting/insert-paragraph-separator-at-break.html

* editing/InsertParagraphSeparatorCommand.cpp:
(WebCore::InsertParagraphSeparatorCommand::doApply): Modified logic for insertion at a break
element.

LayoutTests:

Added new test to cover this case and updated results for one test that now
produces simpler markup.

Reviewed by Simon Fraser.

* editing/inserting/insert-paragraph-separator-at-break-expected.txt: Added.
* editing/inserting/insert-paragraph-separator-at-break.html: Added.
* platform/mac/editing/inserting/5058163-1-expected.txt:



Canonical link: https://commits.webkit.org/80409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91158 268f45cc-cd09-0410-ab3c-d52691b4dbfc